SERVER-10693 include non-object array members if an array is included in $redact